# aiko-chan

./: PROJECT_DIRECTION.md  README.md  package-lock.json  package.json
aiko/: .gitignore  README.md  aiko.ipynb  aiko_benchmark.ipynb  aiko_benchmark_gguf.ipynb  aiko_dataset_fr.jsonl  aiko_dataset_fr_instruct.jsonl  merge_dataset.py  update_system_prompts.py
aiko/dataset/aiko_fr/: dataset_indications.md
aiko_diffusion/: README.md  lora_config.yaml  requirements.txt  train_lora.py
aiko_diffusion/dataset/: README.md  config.example.yaml  pyproject.toml  requirements.txt
aiko_diffusion/dataset/data/: seed_labels.json
aiko_diffusion/dataset/dataset_aiko.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
aiko_diffusion/dataset/src/: __init__.py  __main__.py  augmentor.py  cli.py  config.py  dataset.py  filters.py
aiko_diffusion/dataset/tests/: test_augmentor.py  test_config.py  test_dataset.py
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/bridge/: build.gradle.kts
android/data/: build.gradle.kts
android/docs/: COLOR_PALETTE.md  COMPONENT_GUIDELINES.md  DESIGN_GUIDELINES.md
android/gradle/: libs.versions.toml
backend/: .env.example  .gitignore  Dockerfile  backend.sln  go.mod  go.sum  index.html
backend/backend/: Dockerfile  Program.cs  appsettings.Development.json  appsettings.json  backend.csproj
modal/: .env  .gitignore  README.md  modal_app.py  requirements.txt
web/: nuxt.config.ts  package-lock.json  package.json
web/app/: app.vue
web/public/: hortensia-diamond.gpl
(+1133 files in other folders)
